--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -19,7 +19,8 @@
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lbl_battery" />
+        app:layout_constraintTop_toBottomOf="@+id/lbl_battery"
+        android:clickable="false"/>
 
     <TextView
         android:id="@+id/lbl_battery"
